--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 				<li class="elements-item">
 					<div class="circle">
 						<div class="circle-item">
-							<p class="logo">Trabocco</p>
+							<div class="logotype">
+								<p class="logo">trabocco</p>
+							</div>
 						</div>
 					</div>
 				</li>
